terraform/modules/helm_base/modules/alb-controller/sg.tf
resource "aws_security_group" "this" {
  name   = "${var.cluster_name}-alb-controller"
  vpc_id = var.vpc_id

  tags = {
    Environment = var.environment
    Name        = "${var.cluster_name}-alb-controller"
  }
}

resource "aws_security_group_rule" "o_all" {
  security_group_id = aws_security_group.this.id
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "i_allowed_http_sg" {
  security_group_id = aws_security_group.this.id
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "i_allowed_https_sg" {
  security_group_id = aws_security_group.this.id
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
}
